--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block content %}
 
-<h2>Pest and Disease Classifier</h2>
+<h2>अपने पौधे के कीट और रोगों का परीक्षण करे</h2>
 
 <div>
     <form id="upload-file" method="post" enctype="multipart/form-data">
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div>
-            <button type="button" class="btn btn-outline-info btn-lg " id="btn-predict">Predict!</button>
+            <button type="button" class="btn btn-outline-info btn-lg " id="btn-predict">अनुमान</button>
         </div>
     </div>
 
