--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,7 @@
 
 <div>
     <form id="upload-file" method="post" enctype="multipart/form-data">
-        <label for="imageUpload" class="upload-label">
-            Choose...
+        <label for="imageUpload" class="upload-label">इमेज अपलोड करें
         </label>
         <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg">
     </form>
