--- a/templates/base.html
+++ b/templates/base.html
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-success bg-success">
+<!--     <nav class="navbar navbar-success bg-success">
         <div class="container">
             <a class="navbar-brand text-light" href="#">Kisaansaathi</a>
         </div>
-    </nav>
+    </nav> -->
     <div class="container">
         <div id="content" style="margin-top:2em">{% block content %}{% endblock %}</div>
     </div>
