--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,9 @@
             <a class="navbar-brand text-light" href="#">Kisaansaathi</a>
         </div>
     </nav> -->
-    <div class="container">
+<!--     <div class="container">
         <div id="content" style="margin-top:2em">{% block content %}{% endblock %}</div>
-    </div>
+    </div> -->
 </body>
 
 <footer>
