--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,120 @@
-{% extends "base.html" %} {% block content %}
+{% e{% extends "base.html" %} {% block content %}
+<ul class="nav nav-tabs mb-3" id="myTab0" role="tablist">
+  <li class="nav-item" role="presentation">
+    <button class="nav-link active" id="home-tab0" data-mdb-toggle="tab" data-mdb-target="#home0" type="button" role="tab" aria-controls="home" aria-selected="true">
+    <i class="fas fa-house"></i> होम
+    </button>
+  </li>
+  <li class="nav-item" role="presentation">
+    <button class="nav-link" id="pest-tab0" data-mdb-toggle="tab" data-mdb-target="#pest0" type="button" role="tab" aria-controls="pest" aria-selected="false">
+      <i class="fas fa-bug"></i> कीट
+    </button>
+  </li>
+  <li class="nav-item" role="presentation">
+    <button class="nav-link" id="disease-tab0" data-mdb-toggle="tab" data-mdb-target="#disease0" type="button" role="tab" aria-controls="disease" aria-selected="false">
+      <i class="fas fa-disease"></i> रोग
+    </button>
+  </li>
+</ul>
+  <div class="tab-content" id="myTabContent0">
+    <div class="tab-pane fade show active" id="home0" role="tabpanel" aria-labelledby="home-tab0">
+    <br><br>
+    Tab 1 content.
+  </div>
+  <div class="tab-pane fade" id="pest0" role="tabpanel" aria-labelledby="pest-tab0">
+    <br><br>
+    <h2 style="align:left;">कीट वर्गीकरण</h2>
+    <br>
+    <div style="align=left;">
+      <select id="crop-choose" class="form-select mdb-select md-form colorful-select dropdown-success" aria-label="Default select example" onchange="Selection()">
+        <option selected disabled>Select Crop Type</option>
+        <option value="maize">मक्का</option>
+        <option value="rice">चावल</option>
+      </select>
+    </div>
+    <br>
+    <div>
+    <div id="img-choose"  style="display:none">
+        <form id="upload-file" method="post" enctype="multipart/form-data" >
 
-<h2>अपने पौधे के कीट और रोगों का परीक्षण करे</h2>
-
-<div>
-    <form id="upload-file" method="post" enctype="multipart/form-data">
-        <label for="imageUpload" class="upload-label">इमेज अपलोड करें
-        </label>
-        <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg">
-    </form>
-
-    <div class="image-section" style="display:none;">
-        <div class="img-preview">
-            <div id="imagePreview">
+            <label for="imageUpload" class="upload-label">
+              <i class="fas fa-images"></i>
+                इमेज अपलोड करें
+            </label>
+            <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg">
+        </form>
+    </div>
+        <div id="image" class="image-section" style="display:none;">
+            <div class="img-preview">
+                <div id="imagePreview">
+                </div>
+            </div>
+            <div>
+                <button type="button" class="btn btn-outline btn-lg " id="btn-predict"><i class="fas fa-head-side-virus"></i>अनुमान!</button>
             </div>
         </div>
-        <div>
-            <button type="button" class="btn btn-outline-info btn-lg " id="btn-predict">अनुमान</button>
-        </div>
+
+        <div class="loader" style="display:none;"></div>
+
+        <h3 id="result">
+            <span> </span>
+        </h3>
+
     </div>
+  </div>
 
-    <div class="loader" style="display:none;"></div>
+  <div class="tab-pane fade" id="disease0" role="tabpanel" aria-labelledby="disease-tab0">
+    <br><br>
+    <h2 style="align:left;"> रोग वर्गीकरण</h2>
+    <br>
+    <div style="align:left;">
+      <select id="crop-choose1" class="form-select mdb-select md-form colorful-select dropdown-success" aria-label="Default select example" onchange="Selection1()">
+        <option selected disabled>Select Crop Type</option>
+        <option value="maize">मक्का</option>
+        <option value="rice">चावल</option>
+      </select>
+    </div>
+    <br>
+    <div>
+    <div id="img-choose1"  style="display:none">
+        <form id="upload-file1" method="post" enctype="multipart/form-data" >
 
-    <h3 id="result">
-        <span> </span>
-    </h3>
+            <label for="imageUpload1" class="upload-label">
+              <i class="fas fa-images"></i>
+                इमेज अपलोड करें
+            </label>
+            <input type="file" name="file" id="imageUpload1" accept=".png, .jpg, .jpeg">
+        </form>
+    </div>
+        <div id="image1" class="image-section" style="display:none;">
+            <div class="img-preview">
+                <div id="imagePreview1">
+                </div>
+            </div>
+            <div>
+                <button type="button" class="btn btn-outline btn-lg " id="btn-predict1"><i class="fas fa-head-side-virus"></i>अनुमान!</button>
+            </div>
+        </div>
 
+        <div class="loader" style="display:none;"></div>
+
+        <h3 id="result1">
+            <span> </span>
+        </h3>
+
+    </div>
+  </div>
 </div>
-
+<script type="text/javascript">
+  function Selection(){
+    document.getElementById("img-choose").removeAttribute("style");
+    document.getElementById("image").setAttribute("style",'display:none');
+    document.getElementById("result").setAttribute("style",'display:none');
+  }
+  function Selection1(){
+    document.getElementById("img-choose1").removeAttribute("style");
+    document.getElementById("image1").setAttribute("style",'display:none');
+    document.getElementById("result1").setAttribute("style",'display:none');
+  }
+</script>
 {% endblock %}
