--- a/templates/base.html
+++ b/templates/base.html
@@ -4,27 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kisaansathi</title>
+    <title>AI Demo</title>
     <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"  rel="stylesheet"/>
+<!-- Google Fonts -->
+<link  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"  rel="stylesheet"/>
+<!-- MDB -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
     <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <!-- MDB -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
 </head>
 
 <body>
-<!--     <nav class="navbar navbar-success bg-success">
-        <div class="container">
-            <a class="navbar-brand text-light" href="#">Kisaansaathi</a>
-        </div>
-    </nav> -->
-<!--     <div class="container">
+    <div class="container">
         <div id="content" style="margin-top:2em">{% block content %}{% endblock %}</div>
-    </div> -->
+    </div>
 </body>
 
 <footer>
     <script src="{{ url_for('static', filename='js/main.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='js/main1.js') }}" type="text/javascript"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </footer>
 
 </html>
