--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,7 +5,7 @@
     border: 5px solid #F8F8F8;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
     margin-top: 1em;
-    margin-bottom: 1em;    
+    margin-bottom: 1em;
 }
 
 .img-preview>div {
@@ -41,8 +41,35 @@ input[type="file"] {
     border-radius: 50%;
     width: 50px;
     height: 50px;
-    animation: spin 1s linear infinite;
 }
+.btn-outline {
+  color: #310B0B;
+  background-color: #FF5200;
+  border-color: #FF5200;
+  font-weight: bold;
+  letter-spacing: 0.05em;
+  border-width: medium;
+}
+
+.btn-outline {
+  color: #310B0B;
+  background-color: #FF5200;
+  border-color: #FF5200;
+  font-weight: bold;
+  border-radius: 0;
+  border-width: medium;
+}
+
+.btn-outline:hover,
+.btn-outline:active,
+.btn-outline:focus,
+.btn-outline.active {
+  background: #310B0B;
+  color: #FF5200;
+  border-color: #310B0B;
+
+}
+
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
