--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% e{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} {% block content %}
 <ul class="nav nav-tabs mb-3" id="myTab0" role="tablist">
   <li class="nav-item" role="presentation">
     <button class="nav-link active" id="home-tab0" data-mdb-toggle="tab" data-mdb-target="#home0" type="button" role="tab" aria-controls="home" aria-selected="true">
