--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
     <br>
     <div>
     <div id="img-choose"  style="display:none">
-        <form id="upload-file" method="get" enctype="multipart/form-data" >
+        <form id="upload-file" method="post" enctype="multipart/form-data" >
 
             <label for="imageUpload" class="upload-label">
               <i class="fas fa-images"></i>
@@ -77,7 +77,7 @@
     <br>
     <div>
     <div id="img-choose1"  style="display:none">
-        <form id="upload-file1" method="get" enctype="multipart/form-data" >
+        <form id="upload-file1" method="post" enctype="multipart/form-data" >
 
             <label for="imageUpload1" class="upload-label1">
               <i class="fas fa-images"></i>
