--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
 
 <footer>
     <script src="{{ url_for('static', filename='js/main.js') }}" type="text/javascript"></script>
-    <script src="{{ url_for('static', filename='js/main1.js') }}" type="text/javascript"></script>
+    <!--<script src="{{ url_for('static', filename='js/main1.js') }}" type="text/javascript"></script>-->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </footer>
 
