--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     <br>
     <div style="align=left;">
       <select id="crop-choose" class="form-select mdb-select md-form colorful-select dropdown-success" aria-label="Default select example" onchange="Selection()">
-        <option selected disabled>Select Crop Type</option>
+        <option selected disabled>फसल के प्रकार का चयन करें</option>
         <option value="maize">मक्का</option>
         <option value="rice">चावल</option>
       </select>
@@ -69,7 +69,7 @@
     <br>
     <div style="align:left;">
       <select id="crop-choose1" class="form-select mdb-select md-form colorful-select dropdown-success" aria-label="Default select example" onchange="Selection1()">
-        <option selected disabled>Select Crop Type</option>
+        <option selected disabled>फसल के प्रकार का चयन करें</option>
         <option value="maize">मक्का</option>
         <option value="rice">चावल</option>
       </select>
@@ -79,15 +79,15 @@
     <div id="img-choose1"  style="display:none">
         <form id="upload-file1" method="post" enctype="multipart/form-data" >
 
-            <label for="imageUpload1" class="upload-label1">
+            <label for="imageUpload" class="upload-label">
               <i class="fas fa-images"></i>
                 इमेज अपलोड करें
             </label>
             <input type="file" name="file" id="imageUpload1" accept=".png, .jpg, .jpeg">
         </form>
     </div>
-        <div id="image1" class="image-section1" style="display:none;">
-            <div class="img-preview1">
+        <div id="image1" class="image-section" style="display:none;">
+            <div class="img-preview">
                 <div id="imagePreview1">
                 </div>
             </div>
@@ -96,7 +96,7 @@
             </div>
         </div>
 
-        <div class="loader1" style="display:none;"></div>
+        <div class="loader" style="display:none;"></div>
 
         <h3 id="result1">
             <span> </span>
