--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
 
             <label for="imageUpload" class="upload-label">
               <i class="fas fa-images"></i>
-                इमेज अपलोड करें
+                इमेज अपलोड करें...
             </label>
             <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg">
         </form>
@@ -64,8 +64,7 @@
   </div>
   
   <div class="tab-pane fade" id="disease0" role="tabpanel" aria-labelledby="disease-tab0">
-    <br><br>
-    <h2 style="align:left;"> रोग वर्गीकरण</h2>
+    <h2 style="align:left;">रोग वर्गीकरण</h2>
     <br>
     <div style="align:left;">
       <select id="crop-choose1" class="form-select mdb-select md-form colorful-select dropdown-success" aria-label="Default select example" onchange="Selection1()">
@@ -79,9 +78,9 @@
     <div id="img-choose1"  style="display:none">
         <form id="upload-file1" method="post" enctype="multipart/form-data" >
 
-            <label for="imageUpload" class="upload-label">
+            <label for="imageUpload1" class="upload-label">
               <i class="fas fa-images"></i>
-                इमेज अपलोड करें
+                इमेज अपलोड करें...
             </label>
             <input type="file" name="file" id="imageUpload1" accept=".png, .jpg, .jpeg">
         </form>
