--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <ul class="nav nav-tabs mb-3" id="myTab0" role="tablist">
   <li class="nav-item" role="presentation">
     <button class="nav-link active" id="home-tab0" data-mdb-toggle="tab" data-mdb-target="#home0" type="button" role="tab" aria-controls="home" aria-selected="true">
-    <i class="fas fa-house"></i> होम
+    <i class="fa-regular fa-house"></i> होम
     </button>
   </li>
   <li class="nav-item" role="presentation">
@@ -39,7 +39,7 @@
 
             <label for="imageUpload" class="upload-label">
               <i class="fas fa-images"></i>
-                इमेज अपलोड करें...
+                अपनी तस्वीर चुनें...
             </label>
             <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg">
         </form>
@@ -62,9 +62,10 @@
 
     </div>
   </div>
-  
+
   <div class="tab-pane fade" id="disease0" role="tabpanel" aria-labelledby="disease-tab0">
-    <h2 style="align:left;">रोग वर्गीकरण</h2>
+    <br><br>
+    <h2 style="align:left;">Disease Classifier</h2>
     <br>
     <div style="align:left;">
       <select id="crop-choose1" class="form-select mdb-select md-form colorful-select dropdown-success" aria-label="Default select example" onchange="Selection1()">
@@ -80,7 +81,7 @@
 
             <label for="imageUpload1" class="upload-label">
               <i class="fas fa-images"></i>
-                इमेज अपलोड करें...
+                अपनी तस्वीर चुनें...
             </label>
             <input type="file" name="file" id="imageUpload1" accept=".png, .jpg, .jpeg">
         </form>
@@ -116,4 +117,5 @@
     document.getElementById("result1").setAttribute("style",'display:none');
   }
 </script>
+
 {% endblock %}
