--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
 
   <div class="tab-pane fade" id="disease0" role="tabpanel" aria-labelledby="disease-tab0">
     <br><br>
-    <h2 style="align:left;">Disease Classifier</h2>
+    <h2 style="align:left;">रोग वर्गीकरण</h2>
     <br>
     <div style="align:left;">
       <select id="crop-choose1" class="form-select mdb-select md-form colorful-select dropdown-success" aria-label="Default select example" onchange="Selection1()">
