--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kisansathi</title>
+    <title>AI Demo</title>
     <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"  rel="stylesheet"/>
@@ -28,7 +28,7 @@
 
 <footer>
     <script src="{{ url_for('static', filename='js/main.js') }}" type="text/javascript"></script>
-    <!--<script src="{{ url_for('static', filename='js/main1.js') }}" type="text/javascript"></script>-->
+    <script src="{{ url_for('static', filename='js/main1.js') }}" type="text/javascript"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </footer>
 
