--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,17 @@
 {% extends "base.html" %} {% block content %}
 <ul class="nav nav-tabs mb-3" id="myTab0" role="tablist">
   <li class="nav-item" role="presentation">
-    <button class="nav-link active" id="home-tab0" data-mdb-toggle="tab" data-mdb-target="#home0" type="button" role="tab" aria-controls="home" aria-selected="true">
-    <i class="fa-regular fa-house"></i> होम
-    </button>
-  </li>
-  <li class="nav-item" role="presentation">
-    <button class="nav-link" id="pest-tab0" data-mdb-toggle="tab" data-mdb-target="#pest0" type="button" role="tab" aria-controls="pest" aria-selected="false">
+    <button class="nav-link active" id="pest-tab0" data-mdb-toggle="tab" data-mdb-target="#pest0" type="button" role="tab" aria-controls="pest" aria-selected="true" onclick="clear1()">
       <i class="fas fa-bug"></i> कीट
     </button>
   </li>
   <li class="nav-item" role="presentation">
-    <button class="nav-link" id="disease-tab0" data-mdb-toggle="tab" data-mdb-target="#disease0" type="button" role="tab" aria-controls="disease" aria-selected="false">
+    <button class="nav-link" id="disease-tab0" data-mdb-toggle="tab" data-mdb-target="#disease0" type="button" role="tab" aria-controls="disease" aria-selected="false" onclick="clear2()">
       <i class="fas fa-disease"></i> रोग
     </button>
   </li>
 </ul>
   <div class="tab-content" id="myTabContent0">
-    <div class="tab-pane fade show active" id="home0" role="tabpanel" aria-labelledby="home-tab0">
-    <br><br>
-    Tab 1 content.
-  </div>
   <div class="tab-pane fade" id="pest0" role="tabpanel" aria-labelledby="pest-tab0">
     <br><br>
     <h2 style="align:left;">कीट वर्गीकरण</h2>
@@ -59,7 +50,9 @@
         <h3 id="result">
             <span> </span>
         </h3>
-
+         <div id="clear1" style="display:none;">
+            <button type="button" class="btn btn-outline-secondary btn-lg " id="btn-clear" onclick="clear1()"><i class="fas fa-eraser"></i>Clear!</button>
+        </div>
     </div>
   </div>
 
@@ -101,7 +94,9 @@
         <h3 id="result1">
             <span> </span>
         </h3>
-
+        <div id="clear2" style="display:none;">
+            <button type="button" class="btn btn-outline-secondary btn-lg " id="btn-clear" onclick="clear2()"><i class="fas fa-eraser"></i>Clear!</button>
+        </div>
     </div>
   </div>
 </div>
@@ -113,6 +108,16 @@
   }
   function Selection1(){
     document.getElementById("img-choose1").removeAttribute("style");
+    document.getElementById("image1").setAttribute("style",'display:none');
+    document.getElementById("result1").setAttribute("style",'display:none');
+  }
+  function clear1(){
+    document.getElementById("img-choose").setAttribute("style",'display:none');
+    document.getElementById("image").setAttribute("style",'display:none');
+    document.getElementById("result").setAttribute("style",'display:none');
+  }
+  function clear2(){
+    document.getElementById("img-choose1").setAttribute("style",'display:none');
     document.getElementById("image1").setAttribute("style",'display:none');
     document.getElementById("result1").setAttribute("style",'display:none');
   }
