--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
   </li>
 </ul>
   <div class="tab-content" id="myTabContent0">
-  <div class="tab-pane fade" id="pest0" role="tabpanel" aria-labelledby="pest-tab0">
+  <div class="tab-pane fade show active" id="pest0" role="tabpanel" aria-labelledby="pest-tab0">
     <br><br>
     <h2 style="align:left;">कीट वर्गीकरण</h2>
     <br>
@@ -47,7 +47,7 @@
 
         <div class="loader" style="display:none;"></div>
 
-        <h3 id="result">
+        <h3 id="result" >
             <span> </span>
         </h3>
          <div id="clear1" style="display:none;">
