--- a/static/css/main.css
+++ b/static/css/main.css
@@ -34,13 +34,18 @@ input[type="file"] {
     background: #34495E;
     color: #39D2B4;
 }
-
 .loader {
     border: 8px solid #f3f3f3; /* Light grey */
     border-top: 8px solid #3498db; /* Blue */
     border-radius: 50%;
     width: 50px;
     height: 50px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 .btn-outline {
   color: #310B0B;
@@ -68,10 +73,4 @@ input[type="file"] {
   color: #FF5200;
   border-color: #310B0B;
 
-}
-
-
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
 }
